--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-
-
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
 </project>
