--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ target/classes/project1/Point.class
 target/classes/project1/Triangle.class
 SpringProject.iml
 .idea/uiDesigner.xml
+.idea/libraries/Maven__commons_logging_commons_logging_1_2.xml
