--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 
     <groupId>SpringProject</groupId>
     <artifactId>SpringProject</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>inner-beans</module>
+        <module>beans</module>
+        <module>collections-beans</module>
+        <module>auto-wire</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -14,6 +22,13 @@
             <artifactId>commons-logging</artifactId>
             <version>1.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.5.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
