--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>beans</module>
         <module>collections-beans</module>
         <module>auto-wire</module>
+        <module>bean-scope</module>
     </modules>
 
     <dependencies>
