--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>collections-beans</module>
         <module>auto-wire</module>
         <module>bean-scope</module>
+        <module>context-aware</module>
+        <module>bean-inheritance</module>
     </modules>
 
     <dependencies>
